--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+/****************************************/
+/* Global */
+/****************************************/
+
 html,
 body {
   padding: 0;
@@ -6,11 +10,151 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+:root {
+  --color-1: #f46612;
+  --color-2: #1c284a;
+  --color-3: white;
+}
+
+/****************************************/
+/* Common */
+/****************************************/
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+h1 {
+  font-size: 3em;
+}
+
+input {
+  border: 1px solid var(--color-2);
+  height: 2em;
+  padding: 0 1em;
+}
+
+button {
+  background-color: var(--color-1);
+  padding: 0.5em 1em;
+  border: none;
+  border-radius: 0.2em;
+  color: var(--color-3);
+  font-size: 1em;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: var(--color-2);
+}
+
+.icon {
+  margin: 0 10px;
+  border: 1px solid white;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.icon.disabled {
+  opacity: 0.2;
+  cursor: not-allowed;
+}
+
+.icon:hover:not(.disabled) {
+  border: 1px solid black;
+}
+
+/****************************************/
+/* Layout */
+/****************************************/
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.header-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-1);
+  color: var(--color-2);
+}
+
+.body-container {
+  flex-grow: 1;
+  margin: 5em 0;
+}
+
+.body-content-container {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  gap: 2em;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-2);
+  color: var(--color-3);
+  padding: 5px 0;
+}
+
+/****************************************/
+/* Table */
+/****************************************/
+
+table {
+  width: 100%;
+  border-spacing: 0;
+  border: 1px solid black;
+}
+
+th {
+  background-color: var(--color-2);
+  color: var(--color-3);
+  border-bottom: 1px solid black;
+  padding: 20px 0;
+}
+
+td {
+  text-align: center;
+  padding: 10px 0;
+}
+
+td:not(:last-child){ 
+  border-right: 1px solid var(--color-2);
+}
+
+.table-search-pagination {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  background-color: white;
+}
+
+/****************************************/
+/* Modal */
+/****************************************/
+
+.fullscreen-modal-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.fullscreen-modal {
+  background-color: lightgoldenrodyellow;
 }
