--- a/styles/globals.css
+++ b/styles/globals.css
@@ -144,7 +144,7 @@ td:not(:last-child){
 /****************************************/
 
 .fullscreen-modal-background {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
@@ -156,5 +156,27 @@ td:not(:last-child){
 }
 
 .fullscreen-modal {
-  background-color: lightgoldenrodyellow;
+  background-color: var(--color-3);
+  width: 15%;
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+}
+
+.fullscreen-modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-1);
+  height: 25%;
+  padding: 0 1em;
+}
+
+.fullscreen-modal-content {
+  margin: 1.5em 2em;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  flex-grow: 1;
+  justify-content: space-between;
 }
